# sdk-nrf

./: west.yml
applications/nrf5340_audio/: Kconfig.defaults  prj.conf
applications/nrf5340_audio/child_image/: hci_rpmsg.conf
applications/nrf5340_audio/src/: main.c
applications/nrf5340_audio/src/audio/: audio_datapath.c
applications/nrf5340_audio/src/bluetooth/: Kconfig.defaults
applications/nrf5340_audio/src/bluetooth/bt_management/: bt_mgmt.c
applications/nrf5340_audio/src/bluetooth/bt_management/controller_config/: bt_mgmt_ctlr_cfg.c
applications/nrf5340_audio/src/drivers/: cs47l63_comm.c
applications/nrf5340_audio/src/modules/: audio_i2s.c  audio_sync_timer_rtc.c  audio_usb.c  power_meas.c
applications/nrf5340_audio/src/utils/: board_version.c  uicr.c
drivers/mpsl/clock_control/: nrfx_power_clock.h
include/bluetooth/: conn_evt_prepare_cb.h
samples/app_with_child/: CMakeLists.txt  prj.conf
samples/app_with_child/dummy_child/: CMakeLists.txt
samples/bluetooth/conn_evt_prepare_cb/: README.rst  prj.conf  sample.yaml
samples/bluetooth/conn_evt_prepare_cb/src/: main.c
samples/bluetooth/multiperipheral/: CMakeLists.txt  prj.conf
samples/bluetooth/multiperipheral/src/: main.c
subsys/bluetooth/controller/: Kconfig  flash_driver.c  hci_driver.c  hci_internal.c  hci_internal.h
subsys/bluetooth/host_extensions/: CMakeLists.txt  Kconfig  conn_evt_prepare_cb.c
